--- a/package.json
+++ b/package.json
@@ -14,40 +14,40 @@
     "prepare": "husky install"
   },
   "dependencies": {
-    "@chakra-ui/react": "^2.2.1",
-    "@emotion/react": "^11",
-    "@emotion/styled": "^11",
-    "@fortawesome/fontawesome-svg-core": "^6.1.2",
-    "@fortawesome/free-solid-svg-icons": "^6.1.2",
+    "@chakra-ui/react": "^2.8.0",
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
+    "@fortawesome/fontawesome-svg-core": "^6.4.2",
+    "@fortawesome/free-solid-svg-icons": "^6.4.2",
     "@fortawesome/react-fontawesome": "^0.2.0",
-    "@headlessui/react": "^1.7.15",
-    "@hookform/resolvers": "^2.9.10",
-    "@reduxjs/toolkit": "^1.8.3",
+    "@headlessui/react": "^1.7.16",
+    "@hookform/resolvers": "^2.9.11",
+    "@reduxjs/toolkit": "^1.9.5",
     "axios": "^0.27.2",
-    "chart.js": "^4.3.0",
-    "classnames": "^2.3.1",
-    "date-fns": "^2.29.3",
-    "framer-motion": "^6",
+    "chart.js": "^4.3.3",
+    "classnames": "^2.3.2",
+    "date-fns": "^2.30.0",
+    "framer-motion": "^6.5.1",
     "iterare": "^1.2.1",
-    "jotai": "^2.0.4",
+    "jotai": "^2.3.1",
     "lodash.isempty": "^4.4.0",
     "lodash.uniq": "^4.5.0",
     "next": "12.2.0",
-    "rc-pagination": "^3.1.17",
-    "rc-select": "^14.1.9",
+    "rc-pagination": "^3.5.0",
+    "rc-select": "^14.7.4",
     "react": "18.2.0",
     "react-chartjs-2": "^5.2.0",
-    "react-datepicker": "^4.8.0",
+    "react-datepicker": "^4.16.0",
     "react-dom": "18.2.0",
     "react-draggable": "^4.4.5",
-    "react-hook-form": "^7.33.1",
-    "react-loader-spinner": "^5.1.5",
-    "react-query": "^3.39.1",
-    "react-redux": "^8.0.2",
+    "react-hook-form": "^7.45.4",
+    "react-loader-spinner": "^5.3.4",
+    "react-query": "^3.39.3",
+    "react-redux": "^8.1.2",
     "react-table": "^7.8.0",
     "react-use": "^17.4.0",
-    "redux": "^4.2.0",
-    "redux-saga": "^1.2.1",
+    "redux": "^4.2.1",
+    "redux-saga": "^1.2.3",
     "yup": "^0.32.11"
   },
   "devDependencies": {
@@ -56,33 +56,33 @@
     "@types/lodash.uniq": "^4.5.7",
     "@types/node": "18.0.0",
     "@types/react": "18.0.14",
-    "@types/react-datepicker": "^4.4.2",
+    "@types/react-datepicker": "^4.15.0",
     "@types/react-dom": "18.0.5",
-    "@types/react-table": "^7.7.12",
-    "@typescript-eslint/eslint-plugin": "^5.13.0",
-    "@typescript-eslint/parser": "^5.13.0",
-    "autoprefixer": "^10.4.7",
-    "eslint": "^8.2.0",
+    "@types/react-table": "^7.7.14",
+    "@typescript-eslint/eslint-plugin": "^5.62.0",
+    "@typescript-eslint/parser": "^5.62.0",
+    "autoprefixer": "^10.4.14",
+    "eslint": "^8.46.0",
     "eslint-config-next": "12.3.1",
-    "eslint-config-prettier": "^6.3.0",
+    "eslint-config-prettier": "^6.15.0",
     "eslint-config-react-app": "7.0.0",
     "eslint-import-resolver-ts": "^0.4.2",
     "eslint-import-resolver-typescript": "^1.1.1",
     "eslint-plugin-flowtype": "8.0.3",
-    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-import": "^2.28.0",
     "eslint-plugin-jest": "26.1.4",
     "eslint-plugin-jest-dom": "4.0.1",
-    "eslint-plugin-jsx-a11y": "6.x",
+    "eslint-plugin-jsx-a11y": "~6.7.1",
     "eslint-plugin-lodash": "7.4.0",
-    "eslint-plugin-prettier": "^3.1.1",
-    "eslint-plugin-react": "7.x",
+    "eslint-plugin-prettier": "^3.4.1",
+    "eslint-plugin-react": "~7.33.1",
     "eslint-plugin-react-hooks": "4.4.0",
     "eslint-plugin-testing-library": "5.3.1",
-    "husky": "^8.0.2",
-    "postcss": "^8.4.14",
-    "prettier": "^2.7.1",
-    "sass": "^1.53.0",
-    "tailwindcss": "^3.1.4",
+    "husky": "^8.0.3",
+    "postcss": "^8.4.27",
+    "prettier": "^2.8.8",
+    "sass": "^1.65.1",
+    "tailwindcss": "^3.3.3",
     "typescript": "4.5.5"
   }
 }
