--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@headlessui/react": "^1.7.16",
     "@hookform/resolvers": "^2.9.11",
+    "@react-oauth/google": "^0.11.1",
     "@reduxjs/toolkit": "^1.9.5",
     "axios": "^0.27.2",
     "chart.js": "^4.3.3",
